--- a/ final coursework IS/HTML/Signup.html
+++ b/ final coursework IS/HTML/Signup.html
@@ -131,6 +131,7 @@
                                 </div>
                                 <div class="fa-google-register">
                                     <h5>Continue with Google</h5>
+                                    <h5>Continue with Google</h5>
                                 </div>
                             </div>
                         </div>
